--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -43,7 +43,7 @@
 
     </div>
     <div class="container">
-        <!-- welcome message read from resource bundle welcome.html-->
+        <!-- welcome message read from resource bundle index.html-->
         <p th:text="#{welcome.msg}">Welcome Offline</p>
         <!-- date forwarded from the servlet-->
         <p>Date: <span th:text="${currentDate}">Sat Oct 24 2015</span></p>
