updated the contact information on the about page

--- a/src/main/webapp/WEB-INF/templates/about.html
+++ b/src/main/webapp/WEB-INF/templates/about.html
@@ -13,6 +13,12 @@
     so everyone can view their data and compare it using 1 website and stay healthy using our fit, bit by bit dashboard<br>
 </p>
 
+<footer>
+    <b>Authors:</b> Bert ten Napel & Muniru Awal-Umaru
+    <b>Mail Bert:</b> <a href="mailto:l.ten.napel@st.hanze.nl">l.ten.napel@st.hanze.nl</a>
+    <b>Mail Muniru:</b> <a href="mailto:m.awal-umaru@st.hanze.nl">m.awal-umaru@st.hanze.nl</a>
+</footer>
+
 
 </body>
 </html>
