--- a/src/main/webapp/WEB-INF/templates/file-upload.html
+++ b/src/main/webapp/WEB-INF/templates/file-upload.html
@@ -9,13 +9,30 @@
           crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-2"> Col One</div>
-            <div class="col-sm-12 col-md-6 col-lg-8"> Col Two</div>
-        </div>
-    </div>
+    <h1>UPLOAD PAGE</h1>
+    <!-- https://getbootstrap.com/docs/5.0/forms/validation/-->
+    <div class="container was-validated">
+        <form class="row">
+            <div class="col-sm-3 col-mb-6">
+                <select class="form-select"  aria-label="Default select DATATYPE" required>
+                    <option value="" selected>Open this select menu</option>
+                    <option value="Samsung">Samsung</option>
+                    <option value="Apple">Apple</option>
+                    <option value="Fitbit">Fitbit</option>
+                </select>
+                <div class="invalid-feedback">Not a valid type</div>
+                <input type="file" class="form-control" id="customFile" required/>
+                <div class="invalid-feedback">Invalid file</div>
+            </div>
+            <div class="col-sm-3">
+                <button type="submit" class="btn btn-primary">Submit file</button>
+            </div>
+        </form>
 
+
+
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
