--- a/src/main/webapp/WEB-INF/templates/file-upload.html
+++ b/src/main/webapp/WEB-INF/templates/file-upload.html
@@ -23,8 +23,8 @@
                     <option value="Fitbit">Fitbit</option>
                 </select>
 
-                <label  for="formFileMultiple" class="form-label">Add the .zip files</label>
-                <input class="form-control" type="file" id="formFileMultiple" multiple required>
+                <label for="formFileMultiple" class="form-label">Add the .zip files</label>
+                <input name="file_form" class="form-control" type="file" id="formFileMultiple" multiple required>
 
                 <button type="submit" class="btn btn-primary">Submit file</button>
             </div>
@@ -32,6 +32,8 @@
     </div>
 
     <div class="container"><h2 th:text="${watch_msg}"></h2></div>
+    <div class="container"><h2 th:text="${file_name}"></h2></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
