--- a/src/main/webapp/WEB-INF/templates/file-upload.html
+++ b/src/main/webapp/WEB-INF/templates/file-upload.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="http://localhost:8080/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="http://localhost:8080/file_upload">File upload page</a>
+                    <a class="nav-link active" aria-current="page" href="http://localhost:8080/file-upload">File upload page</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://localhost:8080/about">About</a>
