--- a/src/main/webapp/WEB-INF/templates/about.html
+++ b/src/main/webapp/WEB-INF/templates/about.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+
     <title>About</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-          crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous">
-    </script>
-
 </head>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
 
+    main {
+        flex: 1;
+    }
+
+    footer {
+        background-color: #ff8b00;
+        padding: 10px;
+        text-align: center;
+    }
+</style>
 
 <body>
 <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
@@ -38,22 +49,32 @@
         </div>
     </div>
 </nav>
-<body>
-<p>
-    Our names are Bert ten Napel and Muniru Awal-Umaru<br>
-    We are third year BIN students<br>
-    We have built this website to analyse data that can be retrieved from different kind of smartwatches.<br>
-    The reason we made this, is because we wanted a more general version of the fitbit/samsung/apple dashboard<br>
-    so everyone can view their data and compare it using 1 website and stay healthy using our fit, bit by bit dashboard<br>
-</p>
+<!-- About 1 - Bootstrap Brain Component -->
+<section class="py-3 py-md-5">
+    <div class="container">
+        <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+            <div class="col-12 col-lg-6 col-xl-5">
+                <img class="img-fluid rounded" loading="lazy" src="https://wallpaperaccess.com/full/2739634.jpg" alt="About 1">
+            </div>
+            <div class="col-12 col-lg-6 col-xl-7">
+                <div class="row justify-content-xl-center">
+                    <div class="col-12 col-xl-11">
+                        <br>
 
-<footer>
+                        <h2 class="mb-3">Who Are We?</h2>
+                        <p class="lead fs-4 text-secondary mb-3">We are two bio-informatics students and this is our website for thema 10</p>
+                        <p class="mb-5">This website can be used to upload different smartwatch data and it will show you a graph of your daily step count</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer">
     <b>Authors:</b> Bert ten Napel & Muniru Awal-Umaru
     <b>Mail Bert:</b> <a href="mailto:l.ten.napel@st.hanze.nl">l.ten.napel@st.hanze.nl</a>
     <b>Mail Muniru:</b> <a href="mailto:m.awal-umaru@st.hanze.nl">m.awal-umaru@st.hanze.nl</a>
 </footer>
 
-
-</body>
 </body>
 </html>
